# PlistOxide

./: .gitignore  Cargo.toml  LICENSE.md  README.md  bors.toml  build.rs  rustfmt.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: main.yml
src/: app.rs  main.rs  serialise.rs  style.rs  utils.rs  value.rs  value_type.rs
src/widgets/: click_text_edit.rs  entry.rs  key.rs  mod.rs  toggle.rs  value.rs
