[package]
description = "Property List editor written in Rust"
edition = "2021"
name = "plist-oxide"
publish = false
version = "0.1.0"

[package.metadata.bundle]
category = "public.app-category.utilities"
copyright = "Copyright © 2022-2024 ChefKiss Inc. Licensed under the Thou Shalt Not Profit License version 1.5"
icon = ["src/app_icon/icon*.png"]
identifier = "com.ChefKissInc.PlistOxide"
linux_exec_args = "%f"
linux_mime_types = ["application/x-plist"]
name = "PlistOxide"
osx_minimum_system_version = "10.13"

[profile.release]
lto = true
opt-level = 3
strip = true

[dependencies]
winit = { version = "0.30.5", default-features = true }
eframe = { version = "0.30.0", default-features = false, features = [
    "accesskit",
    "persistence",
    "wgpu",
    "wayland",
    "x11",
] }
egui = { version = "0.29.1", default-features = false, features = [
    "persistence",
] }
egui_extras = "0.29.1"
hex = "0.4.3"
plist = "1.7.0"
rfd = "0.15.1"
serde = { version = "1.0.215", features = ["derive"] }
egui-modal = "0.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = [
    "NSResponder",
    "NSApplication",
    "NSMenu",
    "NSMenuItem",
] }
objc2-foundation = { version = "0.2.2", features = ["NSString", "NSThread"] }
