[package]
description = "Property List editor written in Rust"
edition = "2024"
name = "plist-oxide"
publish = false
version = "0.1.0"

[package.metadata.bundle]
category = "public.app-category.utilities"
copyright = "Copyright © 2022-2025 ChefKiss Inc. Licensed under the Thou Shalt Not Profit License version 1.5"
icon = ["src/app_icon/icon*.png"]
identifier = "org.ChefKiss.PlistOxide"
linux_exec_args = "%f"
linux_mime_types = ["application/x-plist"]
name = "PlistOxide"
osx_minimum_system_version = "10.13"

[profile.release]
lto = true
strip = true

[dependencies]
eframe = { version = "0.32.0", features = [
    "persistence",
    "wgpu",
] }
egui = { version = "0.32.0" }
egui_extras = "0.32.0"
hex = "0.4.3"
plist = "1.7.4"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
font-kit = "0.14.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-app-kit = { version = "0.3.1", features = [
    "NSResponder",
    "NSApplication",
    "NSMenu",
    "NSMenuItem",
] }
objc2-foundation = { version = "0.3.1", features = ["NSString", "NSThread"] }
